--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1b8bffb",
+   "id": "2cd99940",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2e52cc37",
+   "id": "78f5ae79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "54f59fda",
+   "id": "2bae900d",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b27e5a91",
+   "id": "9aae971e",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a90ef020",
+   "id": "122e3d07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3d0a5d77",
+   "id": "cfad2b5a",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "77186ecf",
+   "id": "1da08a86",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ef05af7",
+   "id": "4d457e13",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7778a451",
+   "id": "a1c9d5cb",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9a6c3420",
+   "id": "59328c40",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ef3abbfd",
+   "id": "c9ad57a3",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29ce6307",
+   "id": "a3065162",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0612b4e6",
+   "id": "435fca88",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "76ad8872",
+   "id": "ec79c207",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "735f9fcd",
+   "id": "683f0fb5",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8424781e",
+   "id": "675c1f48",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "49cc4b2d",
+   "id": "b7fa2ee0",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "799b1418",
+   "id": "b7e9bf81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a90d33a3",
+   "id": "ac1352da",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d86b12",
+   "id": "167a151b",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "43982f3c",
+   "id": "8a7c2c6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8f0f9e7a",
+   "id": "d9383682",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8e62a782",
+   "id": "15fe0588",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42164e72",
+   "id": "76bba0e1",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b98e5e7",
+   "id": "0c925acb",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a2567559",
+   "id": "a11e76f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c90490f8",
+   "id": "b9259fb2",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "980d0524",
+   "id": "36a4bd26",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "670c7e96",
+   "id": "91e4b6be",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8decffeb",
+   "id": "b2bfe2e4",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98ddb017",
+   "id": "f2362d54",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8e8699d5",
+   "id": "f78e6aec",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1e577f3c",
+   "id": "b8898def",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d09cba66",
+   "id": "818f4612",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8f0a266",
+   "id": "a80b27a5",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d361584d",
+   "id": "5a018bea",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dabe1449",
+   "id": "8bb0a20e",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e9d52ac9",
+   "id": "c4c7d1ca",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9404bcac",
+   "id": "3f4a453b",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "592ee1c8",
+   "id": "1b9a41a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "402a4150",
+   "id": "c9bd489a",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "917a6b66",
+   "id": "98c65e5f",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e53a7f72",
+   "id": "fa01b016",
    "metadata": {},
    "source": [
     "# Some of the dunder attributes on every module\n",
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "caacfe48",
+   "id": "e41aa4e6",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "cf845d28",
+   "id": "92819e29",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1f4f7772",
+   "id": "44d5903c",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6130d741",
+   "id": "7542c369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a8963297",
+   "id": "123c256e",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a9d3f0ce",
+   "id": "5560729b",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3446385e",
+   "id": "52957d89",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c73ac34f",
+   "id": "e335f879",
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c8b99d04",
+   "id": "d9700521",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "115b6990",
+   "id": "cf149691",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcf5aa1",
+   "id": "ac08e565",
    "metadata": {},
    "source": [
     "# Exercise: Menu\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "da61e010",
+   "id": "a888745e",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "175b7747",
+   "id": "ed846ead",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "4fe2e4b0",
+   "id": "c210fea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "cdc1e1f4",
+   "id": "e54a10e0",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "48457f1f",
+   "id": "82f2ad11",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "1692a36a",
+   "id": "44ea069f",
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "34397c41",
+   "id": "6ec8e52a",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b88e1cce",
+   "id": "c7a96211",
    "metadata": {},
    "source": [
     "# Attributes vs. globals\n",
@@ -2028,7 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "c27d74ec",
+   "id": "e525a361",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f3433e",
+   "id": "416a2a61",
    "metadata": {},
    "source": [
     "# `__name__` can have two values\n",
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5632996d",
+   "id": "73f5ac28",
    "metadata": {},
    "source": [
     "# `__name__` and `'__main__'`\n",
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ca9b2449",
+   "id": "eb346c4f",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "5050c8e7",
+   "id": "688451c8",
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e57be03f",
+   "id": "478cc0df",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b3ec1a19",
+   "id": "7fed8b11",
    "metadata": {
     "collapsed": true
    },
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46e4ca8e",
+   "id": "e43760ee",
    "metadata": {},
    "source": [
     "# Exercise: File size\n",
@@ -2341,8 +2341,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "id": "0207abd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "os.stat_result(st_mode=33188, st_ino=108767842, st_dev=16777223, st_nlink=1, st_uid=0, st_gid=0, st_size=8160, st_atime=1666946613, st_mtime=1666946613, st_ctime=1668591590)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.stat('/etc/passwd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "263a9a78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8160"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.stat('/etc/passwd').st_size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a725dab1",
+   "id": "6c415516",
    "metadata": {},
    "outputs": [],
    "source": []
